fixing size in product feature hover small fix in align ment using flex

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4052,6 +4052,11 @@ dialog::backdrop {
 .feature-list span:first-child {
   font-weight: var(--fw-600);
   text-transform: capitalize;
+  text-align: left;
+}
+
+.feature-list span {
+  flex: 1 1 50%;
 }
 
 .feature-list {
